Fix overflow issues

--- a/css/general.css
+++ b/css/general.css
@@ -41,6 +41,7 @@ body {
 
 main {
   background-color: var(--purple);
+  overflow-x: hidden;
 }
 
 a {
